# KnowledgeAgenticRag

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt  run.py  test_langsmith.py
.augment/rules/: clean_code.md  code_quality.md  dont-say-no-everytime.md
config/: constants.py  settings.py
docs/: agenticRag.md
src/chat/: __init__.py  streamlit_app.py
src/document_processing/: notebook_processor.py  pdf_processor.py  processor.py
src/rag/: __init__.py  workflow.py
src/retrieval/: chroma_client.py  retriever.py
tests/: test_basic_functionality.py
